--- a/index.html
+++ b/index.html
@@ -81,13 +81,22 @@
 <body>
     <div id="form-container">
         <h2>PENGINPUTAN DATA </h2>
-        <form action="https://script.google.com/macros/s/AKfycby_hcmNZjlGPQboLtvrj4P1DvFrAhF2reQ8rTaScCRHtLjdZxvKK2OpkSNXsPcEQaML/exec" method="post" enctype="multipart/form-data">
+        <form action="https://script.google.com/macros/s/AKfycby6KCKITNDRfimOxwbVe1gJ3ReXyh592qHx7fxdWXKPZxWqES_E_Dx6f6jkqMmNlvCp/exec" method="post" enctype="multipart/form-data">
             <label for="no">NOMOR</label>
             <input type="number" id="no" name="no" required />
             <br /><br />
             <label for="nama">NAMA KEGIATAN:</label>
             <input type="text" id="nama" name="nama" required />
             <br /><br />
+             <label for="JABATAN">JABATAN:</label>
+        <select name="JABATAN" id="JABATAN" required>
+          <option></option>
+          <option value="Guru">Guru</option>
+          <option value="Wali kelas">Wali kelas</option>
+          <option value="Ketua jurusan">Ketua jurusan</option>
+          <option value="Wakil kepala sekolah">Wakil kepala sekolah</option>
+        </select>
+        <br /><br />
             <label for="jenis">PILIH JENIS KEGIATAN:</label>
             <select name="jenis" id="jenis" required>
                 <option></option>
