--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Input Data ke Spreadsheet</title>
     <style>
         body {
-            background: linear-gradient(135deg, #265073, #2D9596); 
+            background: linear-gradient(135deg, #87CEEB, #4682B4); /* Warna langit */
             color: #000000; 
             font-family: Arial, sans-serif;
             display: flex;
@@ -17,7 +17,7 @@
         }
 
         #form-container {
-            background-color: #2D9596; 
+            background-color: #B0E0E6; /* Warna langit */
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
@@ -26,7 +26,7 @@
         }
 
         h2 {
-            color: #ffcc00; 
+            color: #FFD700; /* Warna kuning emas */
             text-align: center;
         }
 
@@ -65,7 +65,7 @@
         }
 
         #kameraButton {
-            background-color: #00ccff; 
+            background-color: #87CEEB; /* Warna langit */
             color: #262626; 
             padding: 10px 20px;
             font-size: 14px;
@@ -73,7 +73,7 @@
         }
 
         #kameraButton:hover {
-            background-color: #0099cc; 
+            background-color: #4682B4; /* Warna langit yang lebih gelap */
         }
     </style>
 </head>
