--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Input Data ke Spreadsheet</title>
     <style>
         body {
-            background: linear-gradient(135deg, #87CEEB, #4682B4); /* Warna langit */
+            background: linear-gradient(135deg, #1E90FF, #00BFFF); /* Warna laut */
             color: #000000; 
             font-family: Arial, sans-serif;
             display: flex;
@@ -17,7 +17,7 @@
         }
 
         #form-container {
-            background-color: #B0E0E6; /* Warna langit */
+            background-color: #87CEFA; /* Warna laut yang lebih terang */
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
@@ -65,7 +65,7 @@
         }
 
         #kameraButton {
-            background-color: #87CEEB; /* Warna langit */
+            background-color: #00BFFF; /* Warna laut */
             color: #262626; 
             padding: 10px 20px;
             font-size: 14px;
@@ -73,7 +73,7 @@
         }
 
         #kameraButton:hover {
-            background-color: #4682B4; /* Warna langit yang lebih gelap */
+            background-color: #1E90FF; /* Warna laut yang lebih gelap */
         }
     </style>
 </head>
