--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         h2 {
-            color: #ffffff; /* Warna kuning emas */
+            color: #e6e6e6; /* Warna kuning emas */
             text-align: center;
         }
 
